--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "push": "git add . && git commit -m \"docs: update\" && git push origin master"
   }
 }
